# secondbrain

./: .env.example  CLAUDE.md  ENGRAM_CLAUDE_CODE.md  README.md  docker-compose.yml  features.md  plan.md  pyproject.toml
config/: settings.py
connectors/: registry.py
connectors/github/: ingest.py
connectors/selfhosted/: base.py  obsidian_sync.py
core/: llm.py  memory.py  rag.py  vector_store.py
db/: connection.py  models.py
db/migrations/: 001_initial.sql
ingestion/: pipeline.py
ingestion/chunkers/: strategies.py
ingestion/parsers/: content.py
interfaces/cli/: __main__.py
interfaces/telegram/: bot.py
interfaces/web/: app.py
research/: agent.py  scheduler.py  synthesizer.py  web_search.py
scripts/: setup_db.py  setup_pi.sh
search/: hybrid.py  reranker.py
searxng/: settings.yml
vault/: writer.py
voice/: assistant.py  mic.py  tts.py
~/Documents/Engram-Vault/Resources/: retrieval-augmented-generation-wikipedia.md  the-insane-engineering-of-the-v-22-osprey.md
