[project]
name = "engram"
version = "0.1.0"
description = "Personal AI knowledge assistant — fully local, privacy-first"
requires-python = ">=3.11"
dependencies = [
    # Core
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database — psycopg3 + pgvector
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "pgvector>=0.3.0",

    # Ingestion
    "pymupdf>=1.24.0",
    "trafilatura>=1.8.0",
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",

    # GitHub
    "PyGithub>=2.0.0",

    # Voice
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pyttsx3>=2.90",

    # Telegram
    "python-telegram-bot>=20.0",

    # Self-hosted connectors
    "requests>=2.31.0",
    "webdavclient3>=3.14.0",
    "pyyaml>=6.0",

    # Phase 3: Research Agent
    "duckduckgo-search>=5.0.0",

    # Phase 4: Quality + Web UI
    "flashrank>=0.0.9",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",

    # CLI
    "rich>=13.0.0",
]

[project.scripts]
engram = "interfaces.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "core",
    "db",
    "ingestion",
    "connectors",
    "research",
    "voice",
    "vault",
    "interfaces",
    "search",
    "scripts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
